[package]
name = "rusty-rtree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.1.0"
csv = "1.2.1"
float-ord = "0.3.2"
itertools = "0.12.0"
noisy_float = "0.2.0"
num-traits = "0.2.15"
rand = "0.8.5"
