[package]
name = "rusty-rtree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
noisy_float = "0.2.0"
num-traits = "0.2.15"

[dev-dependencies]
criterion = "0.5.1"
csv = "1.2.1"
rand = "0.8.5"

[[bench]]
name = "rtree"
harness = false
